Feat: se agrega peticion de clima

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ export DATABASE_USER="postgrest"
 export DATABASE_PASSWORD="postgrest"
 export DATABASE_HOST="localhost"
 export DATABASE_DB_NAME="prueba_tecnica_dev"
+export WEATHER_API_TOKEN="c59b4f0e046ad1be580f7a9d05213097"
