fix: update enviroment

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-export DATABASE_USER="postgrest"
-export DATABASE_PASSWORD="postgrest"
+export DATABASE_USER="adairacevedo"
+export DATABASE_PASSWORD="0123456789"
 export DATABASE_HOST="localhost"
 export DATABASE_DB_NAME="prueba_tecnica_dev"
 export WEATHER_API_TOKEN="c59b4f0e046ad1be580f7a9d05213097"
 export DASHBOARD_PORT="8080"
 export API_TOKEN="kFYqXqXC9YdzVMHyaEYP9SKSQx7PcPFy"
+export DASHBOARD_DATABASE_DB_NAME="prueba_tecnica_dev"
+export API_HOST="http://localhost:4001"
